QtWidgets/gen_qgraphicsscene.h

class QGraphicsEllipseItem;
class QGraphicsItem;
class QGraphicsItemGroup;
class QGraphicsLineItem;
class QGraphicsPathItem;
class QGraphicsScene;
class QLineF;
class QMetaObject;
class QObject;
class QPainter;
class QPainterPath;
class QPointF;
class QRectF;
class QTransform;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QGraphicsLineItem QGraphicsLineItem;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QLineF QLineF;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTransform QTransform;
bool QGraphicsScene_override_virtual_drawForeground(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_drawForeground(void* self, QPainter* painter, QRectF* rect);
bool QGraphicsScene_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsScene_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsScene_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsScene_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsScene_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsScene_staticMetaObject();
void QGraphicsScene_delete(QGraphicsScene* self);