qt/gen_qgraphicsscene.nim

proc fQGraphicsScene_virtualbase_drawForeground(self: pointer, painter: pointer, rect: pointer): void{.importc: "QGraphicsScene_virtualbase_drawForeground".}
proc fcQGraphicsScene_override_virtual_drawForeground(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_drawForeground".}
proc fQGraphicsScene_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_timerEvent".}
proc fcQGraphicsScene_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_timerEvent".}
proc fQGraphicsScene_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_childEvent".}
proc fcQGraphicsScene_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_childEvent".}
proc fQGraphicsScene_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_customEvent".}
proc fcQGraphicsScene_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_customEvent".}
proc fQGraphicsScene_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsScene_virtualbase_connectNotify".}
proc fcQGraphicsScene_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_connectNotify".}
proc fQGraphicsScene_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsScene_virtualbase_disconnectNotify".}
proc fcQGraphicsScene_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_disconnectNotify".}
proc fcQGraphicsScene_staticMetaObject(): pointer {.importc: "QGraphicsScene_staticMetaObject".}
proc fcQGraphicsScene_delete(self: pointer) {.importc: "QGraphicsScene_delete".}


func init*(T: type gen_qgraphicsscene_types.QGraphicsScene, h: ptr cQGraphicsScene): gen_qgraphicsscene_types.QGraphicsScene =
  T(h: h)
proc create*(T: type gen_qgraphicsscene_types.QGraphicsScene, ): gen_qgraphicsscene_types.QGraphicsScene =

  gen_qgraphicsscene_types.QGraphicsScene.init(fcQGraphicsScene_new())
proc create*(T: type gen_qgraphicsscene_types.QGraphicsScene, sceneRect: gen_qrect.QRectF): gen_qgraphicsscene_types.QGraphicsScene =

  gen_qgraphicsscene_types.QGraphicsScene.init(fcQGraphicsScene_new2(sceneRect.h))
proc create*(T: type gen_qgraphicsscene_types.QGraphicsScene, x: float64, y: float64, width: float64, height: float64): gen_qgraphicsscene_types.QGraphicsScene =

  gen_qgraphicsscene_types.QGraphicsScene.init(fcQGraphicsScene_new3(x, y, width, height))
proc create2*(T: type gen_qgraphicsscene_types.QGraphicsScene, parent: gen_qobject.QObject): gen_qgraphicsscene_types.QGraphicsScene =

  gen_qgraphicsscene_types.QGraphicsScene.init(fcQGraphicsScene_new4(parent.h))
proc create*(T: type gen_qgraphicsscene_types.QGraphicsScene, sceneRect: gen_qrect.QRectF, parent: gen_qobject.QObject): gen_qgraphicsscene_types.QGraphicsScene =

  gen_qgraphicsscene_types.QGraphicsScene.init(fcQGraphicsScene_new5(sceneRect.h, parent.h))
proc create*(T: type gen_qgraphicsscene_types.QGraphicsScene, x: float64, y: float64, width: float64, height: float64, parent: gen_qobject.QObject): gen_qgraphicsscene_types.QGraphicsScene =

  gen_qgraphicsscene_types.QGraphicsScene.init(fcQGraphicsScene_new6(x, y, width, height, parent.h))
proc metaObject*(self: gen_qgraphicsscene_types.QGraphicsScene, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsScene_metaObject(self.h))

proc metacast*(self: gen_qgraphicsscene_types.QGraphicsScene, param1: cstring): pointer =

  fcQGraphicsScene_metacast(self.h, param1)

proc metacall*(self: gen_qgraphicsscene_types.QGraphicsScene, param1: cint, param2: cint, param3: pointer): cint =

  fcQGraphicsScene_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qgraphicsscene_types.QGraphicsScene, s: cstring): string =

  let v_ms = fcQGraphicsScene_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qgraphicsscene_types.QGraphicsScene, s: cstring): string =

  let v_ms = fcQGraphicsScene_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sceneRect*(self: gen_qgraphicsscene_types.QGraphicsScene, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsScene_sceneRect(self.h))

proc width*(self: gen_qgraphicsscene_types.QGraphicsScene, ): float64 =

  fcQGraphicsScene_width(self.h)

proc height*(self: gen_qgraphicsscene_types.QGraphicsScene, ): float64 =

  fcQGraphicsScene_height(self.h)

proc setSceneRect*(self: gen_qgraphicsscene_types.QGraphicsScene, rect: gen_qrect.QRectF): void =

  fcQGraphicsScene_setSceneRect(self.h, rect.h)

proc setSceneRect2*(self: gen_qgraphicsscene_types.QGraphicsScene, x: float64, y: float64, w: float64, h: float64): void =

  fcQGraphicsScene_setSceneRect2(self.h, x, y, w, h)

proc render*(self: gen_qgraphicsscene_types.QGraphicsScene, painter: gen_qpainter.QPainter): void =

  fcQGraphicsScene_render(self.h, painter.h)

proc itemIndexMethod*(self: gen_qgraphicsscene_types.QGraphicsScene, ): cint =

  cint(fcQGraphicsScene_itemIndexMethod(self.h))

proc setItemIndexMethod*(self: gen_qgraphicsscene_types.QGraphicsScene, methodVal: cint): void =

  fcQGraphicsScene_setItemIndexMethod(self.h, cint(methodVal))

proc isSortCacheEnabled*(self: gen_qgraphicsscene_types.QGraphicsScene, ): bool =

  fcQGraphicsScene_isSortCacheEnabled(self.h)

proc setSortCacheEnabled*(self: gen_qgraphicsscene_types.QGraphicsScene, enabled: bool): void =

  fcQGraphicsScene_setSortCacheEnabled(self.h, enabled)

proc bspTreeDepth*(self: gen_qgraphicsscene_types.QGraphicsScene, ): cint =

  fcQGraphicsScene_bspTreeDepth(self.h)

proc setBspTreeDepth*(self: gen_qgraphicsscene_types.QGraphicsScene, depth: cint): void =

  fcQGraphicsScene_setBspTreeDepth(self.h, depth)

proc itemsBoundingRect*(self: gen_qgraphicsscene_types.QGraphicsScene, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsScene_itemsBoundingRect(self.h))

proc items*(self: gen_qgraphicsscene_types.QGraphicsScene, ): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_items(self.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithPos*(self: gen_qgraphicsscene_types.QGraphicsScene, pos: gen_qpoint.QPointF): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_itemsWithPos(self.h, pos.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithRect*(self: gen_qgraphicsscene_types.QGraphicsScene, rect: gen_qrect.QRectF): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_itemsWithRect(self.h, rect.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithPath*(self: gen_qgraphicsscene_types.QGraphicsScene, path: gen_qpainterpath.QPainterPath): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_itemsWithPath(self.h, path.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc collidingItems*(self: gen_qgraphicsscene_types.QGraphicsScene, item: gen_qgraphicsitem.QGraphicsItem): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_collidingItems(self.h, item.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemAt*(self: gen_qgraphicsscene_types.QGraphicsScene, pos: gen_qpoint.QPointF, deviceTransform: gen_qtransform.QTransform): gen_qgraphicsitem.QGraphicsItem =

  gen_qgraphicsitem.QGraphicsItem(h: fcQGraphicsScene_itemAt(self.h, pos.h, deviceTransform.h))

proc items2*(self: gen_qgraphicsscene_types.QGraphicsScene, x: float64, y: float64, w: float64, h: float64, mode: cint, order: cint): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_items2(self.h, x, y, w, h, cint(mode), cint(order))
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemAt2*(self: gen_qgraphicsscene_types.QGraphicsScene, x: float64, y: float64, deviceTransform: gen_qtransform.QTransform): gen_qgraphicsitem.QGraphicsItem =

  gen_qgraphicsitem.QGraphicsItem(h: fcQGraphicsScene_itemAt2(self.h, x, y, deviceTransform.h))

proc selectedItems*(self: gen_qgraphicsscene_types.QGraphicsScene, ): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_selectedItems(self.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc selectionArea*(self: gen_qgraphicsscene_types.QGraphicsScene, ): gen_qpainterpath.QPainterPath =

  gen_qpainterpath.QPainterPath(h: fcQGraphicsScene_selectionArea(self.h))

proc setSelectionArea*(self: gen_qgraphicsscene_types.QGraphicsScene, path: gen_qpainterpath.QPainterPath, deviceTransform: gen_qtransform.QTransform): void =

  fcQGraphicsScene_setSelectionArea(self.h, path.h, deviceTransform.h)

proc setSelectionAreaWithPath*(self: gen_qgraphicsscene_types.QGraphicsScene, path: gen_qpainterpath.QPainterPath): void =

  fcQGraphicsScene_setSelectionAreaWithPath(self.h, path.h)

proc setSelectionArea2*(self: gen_qgraphicsscene_types.QGraphicsScene, path: gen_qpainterpath.QPainterPath, selectionOperation: cint): void =

  fcQGraphicsScene_setSelectionArea2(self.h, path.h, cint(selectionOperation))

proc createItemGroup*(self: gen_qgraphicsscene_types.QGraphicsScene, items: seq[gen_qgraphicsitem.QGraphicsItem]): gen_qgraphicsitem.QGraphicsItemGroup =

  var items_CArray = newSeq[pointer](len(items))
  for i in 0..<len(items):
    items_CArray[i] = items[i].h

  gen_qgraphicsitem.QGraphicsItemGroup(h: fcQGraphicsScene_createItemGroup(self.h, struct_miqt_array(len: csize_t(len(items)), data: if len(items) == 0: nil else: addr(items_CArray[0]))))

proc destroyItemGroup*(self: gen_qgraphicsscene_types.QGraphicsScene, group: gen_qgraphicsitem.QGraphicsItemGroup): void =

  fcQGraphicsScene_destroyItemGroup(self.h, group.h)

proc addItem*(self: gen_qgraphicsscene_types.QGraphicsScene, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsScene_addItem(self.h, item.h)

proc addEllipse*(self: gen_qgraphicsscene_types.QGraphicsScene, rect: gen_qrect.QRectF): gen_qgraphicsitem.QGraphicsEllipseItem =

  gen_qgraphicsitem.QGraphicsEllipseItem(h: fcQGraphicsScene_addEllipse(self.h, rect.h))

proc addLine*(self: gen_qgraphicsscene_types.QGraphicsScene, line: gen_qline.QLineF): gen_qgraphicsitem.QGraphicsLineItem =

  gen_qgraphicsitem.QGraphicsLineItem(h: fcQGraphicsScene_addLine(self.h, line.h))

proc addPath*(self: gen_qgraphicsscene_types.QGraphicsScene, path: gen_qpainterpath.QPainterPath): gen_qgraphicsitem.QGraphicsPathItem =

  gen_qgraphicsitem.QGraphicsPathItem(h: fcQGraphicsScene_addPath(self.h, path.h))
